// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage renders dashboard for authenticated session 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <a
          class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          [Translation for https://example.com/global/translations.ttl#appName does not exist]
        </a>
      </div>
      <div
        class="bg-gray-100 dark:bg-gray-900"
      >
        <div
          class="main-container main-container--content flex px-0"
        >
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600 lg:hidden"
            data-testid="page-header-left-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="flex-1 text-lg font-semibold font-serif leading-10"
          >
            [Translation for https://example.com/global/translations.ttl#homePageTitle does not exist]
          </div>
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-right-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <div
      class="main-container"
    >
      <div
        class="layout__sidebar layout__sidebar--left  layout__sidebar--content"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left layout__close-button--content text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           [Translation for https://example.com/global/translations.ttl#close does not exist]
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                href="/characters"
              >
                [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/rules"
              >
                [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/faq"
              >
                [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/about"
              >
                [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main  layout__main--content"
      >
        <main
          class="flex-1"
        >
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <h1>
              You are logged in!
            </h1>
            <p>
              This part is in development, more will come.
            </p>
            <a
              href="/about"
            >
              Learn more about the project
            </a>
          </div>
          <div
            data-testid="loading"
          >
            Loading...
          </div>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake  layout__sidebar--content"
      />
      <div
        class="layout__sidebar layout__sidebar--right  layout__sidebar--content"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right layout__close-button--content text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <div
            class="px-2 xl:px-0"
          >
            <div
              data-testid="loading"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage renders splash page for unauthenticated session 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <div
      class="main-container main-container--full"
    >
      <div
        class="layout__sidebar layout__sidebar--left layout__sidebar--full"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left  layout__close-button--full text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           [Translation for https://example.com/global/translations.ttl#close does not exist]
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                href="/characters"
              >
                [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/rules"
              >
                [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/faq"
              >
                [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/about"
              >
                [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main layout__main--full"
      >
        <main
          class="flex-1"
        >
          <section
            class="hero"
          >
            <div
              class="flex-1 flex flex-col justify-center items-center leading-normal bg-gradient-to-t from-white dark:from-gray-800 to-white dark:to-gray-800 via-transparent dark:via-transparent relative"
            >
              <header
                class="mb-2 shadow shadow-md w-full"
              >
                <div
                  class="main-container main-container--content pr-0"
                >
                  <a
                    class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
                    href="/"
                  >
                    [Translation for https://example.com/global/translations.ttl#appName does not exist]
                  </a>
                </div>
                <div
                  class="bg-gray-100 dark:bg-gray-800"
                >
                  <div
                    class="main-container main-container--content flex px-0"
                  >
                    <button
                      class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
                      data-testid="page-header-left-menu-button"
                      type="button"
                    >
                      <svg
                        class="icon"
                        fill="none"
                        stroke="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 6h16M4 12h16M4 18h16"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                    <div
                      class="flex-1 text-lg font-semibold font-serif leading-10"
                    >
                      [Translation for https://example.com/global/translations.ttl#homePageTitle does not exist]
                    </div>
                    <button
                      class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
                      data-testid="page-header-right-menu-button"
                      type="button"
                    >
                      <svg
                        class="icon"
                        fill="none"
                        stroke="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </header>
              <div
                class="px-4 flex-1 text-center"
              >
                <div
                  class="my-8 px-4 py-2 bg-white dark:bg-gray-800 bg-opacity-75 dark:bg-opacity-80 rounded rounded-lg md:rounded-xl max-w-lg shadow shadow-md"
                >
                  <picture
                    class="inline-block"
                  >
                    <source
                      media="(min-width: 600px)"
                      srcset="/icons/app/icons8-dungeons-and-dragons-256.png"
                    />
                    <img
                      alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
                      src="/icons/app/icons8-dungeons-and-dragons-128.png"
                    />
                  </picture>
                  <h1
                    class="text-3xl xs:text-4xl sm:text-6xl my-2 font-serif font-semibold"
                  >
                    [Translation for https://example.com/global/translations.ttl#appName does not exist]
                  </h1>
                  <p
                    class="my-1 max-w-xl"
                  >
                    [Translation for https://example.com/global/translations.ttl#appPitch does not exist]
                  </p>
                  <div
                    class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
                  >
                    [Translation for https://example.com/global/translations.ttl#workInProgress does not exist]
                  </div>
                  <a
                    class="link block my-2 max-w-prose text-center"
                    href="/about"
                  >
                    [Translation for https://example.com/global/translations.ttl#learnMore does not exist]
                  </a>
                </div>
                <p
                  class="text-xs text-gray-600 absolute bottom-1 right-2"
                >
                  Photo by 
                  <a
                    class="link link--subtle"
                    href="https://unsplash.com/@steve_j?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                  >
                    Steve Johnson
                  </a>
                   on 
                  <a
                    class="link link--subtle"
                    href="https://unsplash.com/s/photos/pen-and-paper?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                  >
                    Unsplash
                  </a>
                </p>
              </div>
            </div>
          </section>
          <section
            class="text-center my-16 px-4 sm:px-0 flex flex-col sm:flex-row max-w-prose mx-auto"
          >
            <div
              class="content leading-normal max-w-prose mx-auto flex-1 flex flex-col justify-center"
              style="hyphens: manual;"
            >
              <img
                alt="[Translation for https://example.com/global/translations.ttl#solidLogo does not exist]"
                class="mx-auto"
                src="/logos/solid-emblem.svg"
                style="max-height: 175px; max-width: 200px;"
              />
              <h2
                class="px-4"
              >
                [Translation for https://example.com/global/translations.ttl#logInPitch does not exist]
              </h2>
            </div>
            <div
              class="flex-1 flex flex-col justify-center"
            >
              <div
                class="content leading-normal max-w-prose mx-auto mb-4"
                style="hyphens: auto;"
              >
                <p>
                  [Translation for https://example.com/global/translations.ttl#authenticationGuidance does not exist]
                </p>
              </div>
              <ul
                class="flex flex-col space-y-2 xs:max-w-xs md:max-w-full mx-auto"
              >
                <li
                  class="flex-1"
                >
                  <button
                    class="button button--solid block w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    Inrupt Pod Spaces
                  </button>
                </li>
                <li
                  class="flex-1"
                >
                  <button
                    class="button button--solid block w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    solidcommunity.net
                  </button>
                </li>
                <li
                  class="flex-1"
                >
                  <button
                    class="button button--solid block w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    inrupt.net
                  </button>
                </li>
                <li
                  class="flex-1"
                >
                  <a
                    class="button button--solid block w-full"
                    href="/login?idp"
                  >
                    [Translation for https://example.com/global/translations.ttl#provideIdP does not exist]
                  </a>
                </li>
              </ul>
              <div
                class="content leading-normal max-w-prose mx-auto mt-4"
                style="hyphens: auto;"
              >
                <a
                  href="/signup"
                >
                  [Translation for https://example.com/global/translations.ttl#signupGuidance does not exist]
                </a>
              </div>
            </div>
          </section>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake layout__sidebar--full"
      />
      <div
        class="layout__sidebar layout__sidebar--right layout__sidebar--full"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right  layout__close-button--full text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <div
            class="px-2"
          >
            <div
              class="text-center"
            >
              <h2
                class="font-bold text-xl"
              >
                [Translation for https://example.com/global/translations.ttl#recommendedIdPSet does not exist]
              </h2>
              <ul
                class="flex flex-col space-y-2 my-2"
              >
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    Inrupt Pod Spaces
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    solidcommunity.net
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    inrupt.net
                  </button>
                </li>
              </ul>
              <h2
                class="line-behind font-bold text-xl"
              >
                <span
                  class="line-behind__line"
                />
                <span
                  class="bg-white dark:bg-gray-800 lg:bg-white lg:dark:bg-gray-800"
                >
                  [Translation for https://example.com/global/translations.ttl#or does not exist]
                </span>
              </h2>
              <form
                class="mt-2 md:mt-0 text-left"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#logInImage does not exist]"
                  class="mx-auto hidden md:block"
                  src="/logos/solid-emblem.svg"
                  style="max-width: 200px;"
                />
                <label
                  class="label"
                  for="idp"
                >
                  [Translation for https://example.com/global/translations.ttl#solidIdP does not exist]
                  <input
                    class="input"
                    data-testid="login-form-idp-field"
                    id="idp"
                    placeholder="https://"
                    required=""
                    type="url"
                    value=""
                  />
                </label>
                <label
                  class="label"
                  for="rememberIdp"
                >
                  <input
                    class="checkbox"
                    data-testid="login-form-remember-checkbox"
                    id="rememberIdp"
                    type="checkbox"
                  />
                  <span
                    class="label__text"
                  >
                    [Translation for https://example.com/global/translations.ttl#rememberIdP does not exist]
                  </span>
                </label>
                <button
                  class="button w-full"
                  data-testid="login-form-button"
                  type="submit"
                >
                  [Translation for https://example.com/global/translations.ttl#logIn does not exist]
                </button>
                <div
                  class="mt-4"
                >
                  <a
                    class="link"
                    href="/signup"
                  >
                    [Translation for https://example.com/global/translations.ttl#signupSolidPrompt does not exist]
                  </a>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
